--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -22,26 +22,19 @@ allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
-allow 104.244.73.177;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
-allow 104.244.74.173;
 allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.140;
 allow 104.244.75.74;
-allow 104.244.76.110;
 allow 104.244.76.237;
 allow 104.244.77.208;
-allow 104.244.77.210;
-allow 104.244.78.132;
 allow 104.244.78.162;
 allow 104.244.78.232;
 allow 104.244.78.233;
-allow 104.244.78.26;
-allow 104.244.79.236;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
@@ -59,17 +52,13 @@ allow 107.174.45.55;
 allow 107.174.83.58;
 allow 107.175.31.193;
 allow 107.189.10.175;
-allow 107.189.10.20;
 allow 107.189.1.111;
 allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
 allow 107.189.1.175;
-allow 107.189.12.194;
-allow 107.189.12.24;
 allow 107.189.1.228;
 allow 107.189.12.3;
-allow 107.189.12.58;
 allow 107.189.12.7;
 allow 107.189.12.88;
 allow 107.189.13.180;
@@ -78,7 +67,6 @@ allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
-allow 107.189.14.214;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
@@ -97,20 +85,16 @@ allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
 allow 107.189.5.249;
-allow 107.189.5.37;
 allow 107.189.5.7;
-allow 107.189.5.9;
 allow 107.189.6.124;
 allow 107.189.7.141;
 allow 107.189.7.144;
 allow 107.189.7.168;
-allow 107.189.7.92;
 allow 107.189.8.133;
 allow 107.189.8.136;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.238;
-allow 107.189.8.240;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
@@ -191,7 +175,6 @@ allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
 allow 156.229.233.92;
-allow 157.180.42.50;
 allow 157.245.206.140;
 allow 158.220.123.219;
 allow 158.69.252.116;
@@ -254,7 +237,6 @@ allow 176.65.143.138;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
-allow 177.149.146.25;
 allow 178.128.160.54;
 allow 178.162.175.5;
 allow 178.162.197.91;
@@ -283,6 +265,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
+allow 179.73.188.220;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -586,6 +569,7 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -1002,6 +986,7 @@ allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -1086,6 +1071,7 @@ allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fef9:100:1100::199;
@@ -1296,7 +1282,6 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f8:1c1c:b052::1;
 allow 2a01:4f9:2b:75d::124:148;
-allow 2a01:4f9:c010:dc45::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1346,6 +1331,7 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1614,7 +1600,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1768,7 +1753,6 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
-allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1782,6 +1766,7 @@ allow 45.138.16.248;
 allow 45.138.16.42;
 allow 45.138.16.76;
 allow 45.138.87.142;
+allow 45.139.50.202;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1959,6 +1944,7 @@ allow 82.118.248.205;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -1971,6 +1957,7 @@ allow 84.252.120.131;
 allow 85.239.41.130;
 allow 85.239.55.172;
 allow 85.93.218.204;
+allow 86.107.101.115;
 allow 86.107.101.122;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1989,6 +1976,7 @@ allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.111.87;
+allow 89.187.143.31;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.36.231.128;
