--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,8 +125,10 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.1.104.243;
 allow 118.163.74.160;
 allow 121.127.37.151;
+allow 121.78.28.166;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -714,6 +716,7 @@ allow 198.98.62.158;
 allow 199.189.27.123;
 allow 199.195.249.214;
 allow 199.195.251.119;
+allow 199.195.251.202;
 allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
@@ -822,6 +825,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
+allow 2001:9b0:25b:f700::913;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
 allow 2001:b030:2422::7234;
@@ -1277,6 +1281,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1583,6 +1588,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1733,6 +1739,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1814,6 +1821,7 @@ allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
