--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -125,8 +125,10 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
+deny 118.1.104.243;
 deny 118.163.74.160;
 deny 121.127.37.151;
+deny 121.78.28.166;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.127.180.156;
@@ -714,6 +716,7 @@ deny 198.98.62.158;
 deny 199.189.27.123;
 deny 199.195.249.214;
 deny 199.195.251.119;
+deny 199.195.251.202;
 deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
@@ -822,6 +825,7 @@ deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
+deny 2001:9b0:25b:f700::913;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:3514::b;
 deny 2001:b030:2422::7234;
@@ -1277,6 +1281,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1583,6 +1588,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1733,6 +1739,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
+deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1814,6 +1821,7 @@ deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
